chatgpt support added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   toggle_switch: ^2.3.0
   flutter_localizations:
     sdk: flutter
+  chat_gpt_sdk: ^3.0.4
 
 dev_dependencies:
   flutter_test:
