app icons added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: 2.4.9
   hive_generator: 2.0.1
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -57,3 +58,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/data/
+
+flutter_icons:
+  image_path: 'assets/images/app_logo.png'
+  android: true
+  ios: true
