--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,19 +15,15 @@ dependencies:
   firebase_core: ^2.25.4
   google_fonts: ^6.1.0
   lottie: ^3.0.0
-  fluttertoast: ^8.2.4
   icons_plus: ^5.0.0
   flutter_svg: ^2.0.10+1
-  device_info: ^2.0.3
   dropdown_button2: ^2.3.9
   animated_toggle_switch: ^0.8.2
-  file_picker: ^6.2.0
   provider: ^6.1.2
-  quickalert: ^1.1.0
   google_generative_ai: ^0.2.2
   flutter_dotenv: ^5.1.0
   uuid: ^4.3.3
-  flutter_markdown: ^0.6.22
+  flutter_markdown: ^0.6.22+1
   intl: any
   image_picker: ^1.0.7
   toastification: ^1.2.1
@@ -38,6 +34,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   chat_gpt_sdk: ^3.0.4
+  markdown: ^7.2.2
+  url_launcher: ^6.2.6
+  flutter_highlighter: ^0.1.1
 
 dev_dependencies:
   flutter_test:
