code formatter enhancements, prompts added, some bugs fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   lottie: ^3.0.0
   icons_plus: ^5.0.0
   flutter_svg: ^2.0.10+1
-  dropdown_button2: ^2.3.9
+  dropdown_button2: ^3.0.0-beta.12
   animated_toggle_switch: ^0.8.2
   provider: ^6.1.2
   google_generative_ai: ^0.2.2
@@ -37,6 +37,8 @@ dependencies:
   markdown: ^7.2.2
   url_launcher: ^6.2.6
   flutter_highlighter: ^0.1.1
+  highlighter: ^0.1.1
+  share_plus: ^8.0.3
 
 dev_dependencies:
   flutter_test:
